# seed-audio-ai-site-kit

./: .gitignore  README.md  SeedAudioAISiteKit.podspec  composer.json  go.mod  jsr.json  mod.ts  package.json  publish-record.csv  publish-record.json  publish-record.md  sitekit.go  sitekit_test.go
.github/workflows/: cocoapods-publish.yml
chocolatey/: README.md  seed-audio-ai-site-kit.nuspec
chocolatey/tools/: SeedAudioAISiteKit.psm1  VERIFICATION.txt
conda/recipe/: meta.yaml  recipe.yaml
cran/seedAudioAiPwaToolkit/: DESCRIPTION  LICENSE  NAMESPACE
dart/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/lib/: seed_audio_ai_site_kit.dart
dotnet/: README.md  SeedAudioAISiteKit.cs  SeedAudioAISiteKit.csproj
elixir/: README.md  mix.exs
flathub/: index.html  io.seedaud.SeedAudioAiPwaToolkit.desktop  io.seedaud.SeedAudioAiPwaToolkit.metainfo.xml  io.seedaud.SeedAudioAiPwaToolkit.yml  manifest.webmanifest  seed-audio-ai-pwa-toolkit.py
github-npm/: README.md  index.js  package.json
java/: pom.xml
lua/: seed-audio-ai-site-kit-0.1.0-1.rockspec  seed_audio_ai_site_kit.lua  test.lua
open-vsx/: README.md  extension.js  package-lock.json  package.json  test.js
php/: composer.json
pwa/: offline.html
python/: README.md  pyproject.toml
python/seed_audio_ai_site_kit/: __init__.py
python/tests/: test_sitekit.py
ruby/: README.md  seed-audio-ai-site-kit.gemspec  test_ruby.rb
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: public_api.rs
src/: sitekit.js
swift/: Package.swift
tests/: pwa.test.js  sitekit.test.js
(+27 files in other folders)
