[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-audio-ai-site-kit"
version = "0.1.0"
description = "Small unofficial metadata and URL helpers for Seed Audio AI at seedaud.io."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Seed Audio AI Site Kit contributors" }]
keywords = ["seed-audio-ai", "seedaud", "text-to-speech", "ai-voice", "site-kit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.urls]
Homepage = "https://seedaud.io/"
Repository = "https://github.com/bbwdadfg/seed-audio-ai-site-kit"
"Text to Speech" = "https://seedaud.io/text-to-speech/"
Pricing = "https://seedaud.io/pricing/"
Safety = "https://seedaud.io/safety/"

[tool.setuptools]
packages = ["seed_audio_ai_site_kit"]
